@@ -1,3 +1,9 @@
+2004-10-13  Kalle Marjola  <kmarjola@enpocket.com>
+    * test/test_ppg.c: Added support for X-WAP-Initiator-URI, use -I
+      option.
+    * doc/userguide/userguide.xml: updated accordingly
+    * utils/run-check: fixed check so that it works in bash	
+
 2004-10-06 Alexander Malysh <amalysh at kannel.org>
     * configure.in, configure: added check for 'sem_init' in librt.
       This needs on Solaris & HP-UX.
